Fix [#37297] Crash when Adding and Removing Fluid Particlesystem.

Using freed mem...